Working on fixing alignment issues with social media icons on portfolio.html

--- a/src/style.css
+++ b/src/style.css
@@ -347,24 +347,20 @@ p,
 	display: flex;
 	justify-content: center;
 	font-size: 38px;
-	margin-top: -30px;
+	margin-top: 30px;
+}
+
+.icons {
+	display: flex;
+	list-style-type: none;
+	justify-content: space-evenly;
+	margin-top: 30px;
 }
 
 .linkedin-icon,
 .instagram-icon {
-	position: relative;
-	display: flex;
-	justify-content: center;
+	text-align: center;
 	font-size: 32px;
-	margin-top: 36px;
-}
-
-.linkedin-icon {
-	right: -290px;
-}
-
-.instagram-icon {
-	left: -290px;
 }
 
 #thai-food-project,
